--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^0.8.6
   kakao_flutter_sdk: ^1.4.0
   onboarding: ^3.1.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
