--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
-  firebase_core: ^2.6.1
+  firebase_core: ^2.7.0
   cloud_firestore: ^4.4.2
-  firebase_auth: ^4.2.8
-  provider: ^6.0.3
+  firebase_auth: ^4.2.9
+  provider: ^6.0.5
   get: ^4.6.5
   flutter_naver_login: ^1.7.0
   sensors_plus: ^2.0.1
@@ -50,6 +50,29 @@ dependencies:
   kakao_flutter_sdk: ^1.4.0
   onboarding: ^3.1.0
   permission_handler: ^10.2.0
+  flushbar: ^1.10.4
+  firebase_remote_config: ^3.0.13
+  dio: ^4.0.6
+  in_app_review: ^2.0.6
+  loading: ^1.0.2
+  custom_switch: ^0.0.1
+  pull_to_refresh: ^2.0.0
+  animated_widgets: ^1.1.0
+  cached_network_image: ^3.2.3
+  flutter_secure_storage: ^8.0.0
+  awesome_dialog: ^3.0.2
+  modal_bottom_sheet: ^2.1.2
+  firebase_messaging: ^14.2.5
+  firebase_analytics: ^10.1.4
+  firebase_crashlytics: ^3.0.15
+  custom_pop_up_menu: ^1.2.4
+  uuid: ^3.0.7
+  flutter_sliding_tutorial: ^2.0.0+1
+  font_awesome_flutter: ^10.4.0
+  webview_flutter: ^3.0.4
+  carousel_slider: ^4.2.1
+
+  
 
 dev_dependencies:
   flutter_test:
