--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,33 +44,12 @@ dependencies:
   sensors_plus: ^2.0.1
   path: ^1.8.1
   path_provider: ^2.0.11
-  
-  flutter_native_splash: ^2.2.9
-  image_picker: ^0.8.6
+  image_picker: ^0.8.6+3
   kakao_flutter_sdk: ^1.4.0
   onboarding: ^3.1.0
   permission_handler: ^10.2.0
-  flushbar: ^1.10.4
-  firebase_remote_config: ^3.0.13
-  dio: ^4.0.6
-  in_app_review: ^2.0.6
-  loading: ^1.0.2
-  custom_switch: ^0.0.1
-  pull_to_refresh: ^2.0.0
-  animated_widgets: ^1.1.0
-  cached_network_image: ^3.2.3
-  flutter_secure_storage: ^8.0.0
-  awesome_dialog: ^3.0.2
-  modal_bottom_sheet: ^2.1.2
-  firebase_messaging: ^14.2.5
-  firebase_analytics: ^10.1.4
-  firebase_crashlytics: ^3.0.15
-  custom_pop_up_menu: ^1.2.4
-  uuid: ^3.0.7
-  flutter_sliding_tutorial: ^2.0.0+1
-  font_awesome_flutter: ^10.4.0
-  webview_flutter: ^3.0.4
-  carousel_slider: ^4.2.1
+  io: ^1.0.4
+
 
   
 
@@ -99,7 +78,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/fonts/
+    - assets/fonts/avatar.ttf
+    - assets/fonts/avatar1.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
