--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   onboarding: ^3.1.0
   permission_handler: ^10.2.0
   io: ^1.0.4
+  flutter_svg: ^2.0.2
+  cached_network_image: ^3.2.3
 
 
   
