--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.15
+  shared_preferences: ^2.0.18
   firebase_core: ^2.7.0
   cloud_firestore: ^4.4.2
   firebase_auth: ^4.2.9
@@ -44,13 +44,18 @@ dependencies:
   sensors_plus: ^2.0.1
   path: ^1.8.1
   path_provider: ^2.0.11
-  image_picker: ^0.8.6+3
+  image_picker: ^0.8.6+4
   kakao_flutter_sdk: ^1.4.0
   onboarding: ^3.1.0
   permission_handler: ^10.2.0
   io: ^1.0.4
   flutter_svg: ^2.0.2
   cached_network_image: ^3.2.3
+  share: ^2.0.4
+  dio: ^4.0.6
+  camera: ^0.10.3+2
+  app_settings: ^4.2.0
+  image_gallery_saver: ^1.7.1
 
 
   
