--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   app_settings: ^4.2.0
   image_gallery_saver: ^1.7.1
   side_navigation: ^1.0.4
+  flutter_linkify: ^5.0.2
+  url_launcher: ^6.1.10
 
 
   
