--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_page_bookmark: ^0.0.1
   pull_to_refresh: ^2.0.0
   flutter_switch: ^0.3.2
+  lite_rolling_switch: ^1.0.0
 
 
   
