--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ dependencies:
   pull_to_refresh: ^2.0.0
   flutter_switch: ^0.3.2
   lite_rolling_switch: ^1.0.0
+  connectivity_plus: ^3.0.3
+  fluttertoast: ^8.2.1
+  buttons_tabbar: ^1.3.6
+  flutter_tools: ^0.0.1-beta
 
 
   
