--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,13 @@ dependencies:
   fluttertoast: ^8.2.1
   buttons_tabbar: ^1.3.6
   flutter_tools: ^0.0.1-beta
+  floatingpanel: ^1.1.3
+  slidable_bar: ^1.1.1
+  simple_sidebar: ^0.0.7
+  collapsible_sidebar: ^2.0.3+3
+  google_fonts: ^4.0.3
+  line_icons: ^2.0.1
+
 
 
   
