--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   collapsible_sidebar: ^2.0.3+3
   google_fonts: ^4.0.3
   line_icons: ^2.0.1
+  drag_and_drop_gridview: ^1.0.8
+  simple_speed_dial: ^0.1.7
 
 
 
